--- a/.qmake.conf
+++ b/.qmake.conf
@@ -1,4 +1,8 @@
 QMAKEPATH += $$PWD/tools/qmake
+
+# Resolve root directories for sources
+QTWEBENGINE_ROOT = $$PWD
+
 load(qt_build_config)
 CONFIG += warning_clean
 
