Add support for system based ninja
Adds system-ninja feature, which is enabled if
ninja is found in system path.

Change-Id: Icc58bc252d67a27f80c139349be28f9fd239108a
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@qt.io>
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/configure.json
+++ b/configure.json
@@ -8,6 +8,13 @@
         }
     },
 
+    "tests" : {
+        "ninja": {
+            "label": "system ninja",
+            "type": "detectNinja"
+        }
+    },
+
     "features": {
         "proprietary-codecs": {
             "label": "Proprietary Codecs",
@@ -19,6 +26,11 @@
             "label": "Spellchecker",
             "purpose": "Enables the use of Chromium's spellchecker",
             "output": [ "privateFeature" ]
+        },
+        "system-ninja": {
+            "label": "Using system ninja",
+            "condition": "tests.ninja",
+            "output": [ "privateFeature" ]
         }
     },
 
@@ -27,7 +39,8 @@
             "section": "Qt WebEngine",
             "entries": [
                 "proprietary-codecs",
-                "spellchecker"
+                "spellchecker",
+                "system-ninja"
             ]
         }
     ]
