Add gn bootstrap to build system
Bootstraps gn wihout rebuild.

Change-Id: I09ee4d6b6f458f16f0d9ac18433823153ab75995
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/configure.json
+++ b/configure.json
@@ -12,6 +12,10 @@
         "ninja": {
             "label": "system ninja",
             "type": "detectNinja"
+        },
+        "gn": {
+            "label": "system gn",
+            "type": "detectGn"
         }
     },
 
@@ -31,6 +35,11 @@
             "label": "Using system ninja",
             "condition": "tests.ninja",
             "output": [ "privateFeature" ]
+        },
+        "system-gn": {
+            "label": "Using system gn",
+            "condition": "tests.gn",
+            "output": [ "privateFeature" ]
         }
     },
 
@@ -40,6 +49,7 @@
             "entries": [
                 "proprietary-codecs",
                 "spellchecker",
+                "system-gn",
                 "system-ninja"
             ]
         }
