--- a/configure.json
+++ b/configure.json
@@ -1,14 +1,45 @@
 {
     "module": "webengine",
 
+    "testDir": "tools/qmake/config.tests",
+
     "commandline": {
         "options": {
+            "alsa": "boolean",
             "proprietary-codecs": "boolean",
+            "pulseaudio": "boolean",
             "spellchecker": "boolean"
         }
     },
 
+    "libraries": {
+        "alsa": {
+            "label": "ALSA",
+            "test": "alsa",
+            "sources": [
+                "-lasound"
+            ]
+        },
+        "pulseaudio": {
+            "label": "PulseAudio >= 0.9.10",
+            "sources": [
+                { "type": "pkgConfig", "args": "libpulse >= 0.9.10 libpulse-mainloop-glib" }
+            ]
+        }
+    },
+
     "features": {
+        "alsa": {
+            "label": "ALSA",
+            "condition": "config.unix && libs.alsa",
+            "output": [ "privateFeature" ]
+        },
+        "pulseaudio": {
+            "label": "PulseAudio",
+            "autoDetect": "config.unix",
+            "condition": "libs.pulseaudio",
+            "output": [ "privateFeature" ]
+        },
         "proprietary-codecs": {
             "label": "Proprietary Codecs",
             "autoDetect": false,
@@ -27,7 +58,17 @@
             "section": "Qt WebEngine",
             "entries": [
                 "proprietary-codecs",
-                "spellchecker"
+                "spellchecker",
+                {
+                    "type": "feature",
+                    "args": "alsa",
+                    "condition": "config.unix"
+                },
+                {
+                    "type": "feature",
+                    "args": "pulseaudio",
+                    "condition": "config.unix"
+                }
             ]
         }
     ]
