Add print and pdf feature to new configure system
Currently printing and pdf are bounded together. Make compilation
optional by adding it as a feature.

Fix formatting of embedded_linux.pri

Task-number: QTBUG-57731
Task-number: QTBUG-58108
Change-Id: I53a2baea656df0a5b6139365ed06385c9ebc5830
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/configure.json
+++ b/configure.json
@@ -1,11 +1,15 @@
 {
     "module": "webengine",
+    "depends": [
+        "printsupport"
+    ],
 
     "testDir": "tools/qmake/config.tests",
 
     "commandline": {
         "options": {
             "alsa": "boolean",
+            "printing-and-pdf": "boolean",
             "proprietary-codecs": "boolean",
             "pulseaudio": "boolean",
             "spellchecker": "boolean"
@@ -51,6 +55,13 @@
             "condition": "libs.pulseaudio",
             "output": [ "privateFeature" ]
         },
+        "printing-and-pdf": {
+            "label": "Printing and PDF",
+            "condition": "module.printsupport && features.printer",
+            "autoDetect": "!features.cross_compile",
+            "purpose": "Enables printing and output to PDF",
+            "output": [ "privateFeature" ]
+        },
         "proprietary-codecs": {
             "label": "Proprietary Codecs",
             "autoDetect": false,
@@ -78,6 +89,7 @@
         {
             "section": "Qt WebEngine",
             "entries": [
+                "printing-and-pdf",
                 "proprietary-codecs",
                 "spellchecker",
                 "system-gn",
