Do not autodetect system gn and hide option in summary
We will need a custom gn to build qtwebengine, so we shouldn't use the
system gn unless explicitly requested, and we shouldn't advertise using
it to users as it usually won't work.

Change-Id: I98271ec70841d1b78ff5a1099575872646af73b2
Reviewed-by: Michal Klocek <michal.klocek@qt.io>

--- a/configure.json
+++ b/configure.json
@@ -87,6 +87,7 @@
         },
         "system-gn": {
             "label": "Using system gn",
+            "autoDetect": false,
             "condition": "tests.gn",
             "output": [ "privateFeature" ]
         }
@@ -100,7 +101,6 @@
                 "printing-and-pdf",
                 "proprietary-codecs",
                 "spellchecker",
-                "system-gn",
                 "system-ninja",
                 {
                     "type": "feature",
