Fix build with 5.8 and make embedded configurable
Avoid checking features only available in 5.9 directly. This also
changes the embedded-build configuration to being a feature that can be
set at configure time.

Change-Id: I9b42dcf696734a83e5c8d6e1cc07562cbeb3f993
Reviewed-by: Michael Brüning <michael.bruning@qt.io>
Reviewed-by: Michal Klocek <michal.klocek@qt.io>

--- a/configure.json
+++ b/configure.json
@@ -9,6 +9,7 @@
     "commandline": {
         "options": {
             "alsa": "boolean",
+            "embedded": "boolean",
             "pepper-plugins": "boolean",
             "printing-and-pdf": "boolean",
             "proprietary-codecs": "boolean",
@@ -41,10 +42,21 @@
         "gn": {
             "label": "system gn",
             "type": "detectGn"
+        },
+        "embedded": {
+            "label": "embedded",
+            "type": "embedded"
         }
     },
 
     "features": {
+        "embedded": {
+            "label": "Embedded build",
+            "condition": "config.unix",
+            "autoDetect": "tests.embedded",
+            "purpose": "Enables the embedded build configuration",
+            "output": [ "privateFeature" ]
+        },
         "alsa": {
             "label": "ALSA",
             "condition": "config.unix && libs.alsa",
@@ -58,14 +70,14 @@
         },
         "pepper-plugins": {
             "label": "Pepper Plugins",
-            "autoDetect": "!features.cross_compile",
+            "autoDetect": "!features.embedded",
             "purpose": "Enables use of Pepper Flash and Widevine plugins",
             "output": [ "privateFeature" ]
         },
         "printing-and-pdf": {
             "label": "Printing and PDF",
             "condition": "module.printsupport && features.printer",
-            "autoDetect": "!features.cross_compile",
+            "autoDetect": "!features.embedded",
             "purpose": "Enables printing and output to PDF",
             "output": [ "privateFeature" ]
         },
@@ -97,6 +109,7 @@
         {
             "section": "Qt WebEngine",
             "entries": [
+                "embedded",
                 "pepper-plugins",
                 "printing-and-pdf",
                 "proprietary-codecs",
