--- a/src/core/qtwebengine_resources.gni
+++ b/src/core/qtwebengine_resources.gni
@@ -80,7 +80,7 @@ repack("qtwebengine_repack_resources_devtools") {
 
 chrome_repack_locales("qtwebengine_repack_locales_pack") {
   input_locales = locales
-  output_dir_name = "qtwebengine_locales"
+  output_dir = "$root_out_dir/qtwebengine_locales"
   output_locales = locales
 }
 
