Make WebRTC support configurable
WebRTC is a big feature that Chromium has left configurable for a long
time, we can forward that configurability to our users to allow them
control it directly instead of just enabling it on desktop and disabling
it on embedded.

Change-Id: I4445e2189112205ddf1368bd5e197bab2df92092
Reviewed-by: Michael Brüning <michael.bruning@qt.io>

--- a/configure.json
+++ b/configure.json
@@ -14,7 +14,8 @@
             "printing-and-pdf": "boolean",
             "proprietary-codecs": "boolean",
             "pulseaudio": "boolean",
-            "spellchecker": "boolean"
+            "spellchecker": "boolean",
+            "webrtc": "boolean"
         }
     },
 
@@ -92,6 +93,12 @@
             "purpose": "Enables the use of Chromium's spellchecker",
             "output": [ "privateFeature" ]
         },
+        "webrtc": {
+            "label": "WebRTC",
+            "autoDetect": "!features.embedded",
+            "purpose": "Enables WebRTC support",
+            "output": [ "privateFeature" ]
+        },
         "system-ninja": {
             "label": "Using system ninja",
             "condition": "tests.ninja",
@@ -114,6 +121,7 @@
                 "printing-and-pdf",
                 "proprietary-codecs",
                 "spellchecker",
+                "webrtc",
                 "system-ninja",
                 {
                     "type": "feature",
