--- a/src/core/qtwebengine_sources.gni
+++ b/src/core/qtwebengine_sources.gni
@@ -1,4 +1,6 @@
 import("//build/config/features.gni")
+import("//components/spellcheck/spellcheck_build_features.gni")
+import("//printing/features/features.gni")
 
 source_set("qtwebengine_spellcheck_sources") {
   sources = [
@@ -32,7 +34,9 @@ source_set("qtwebengine_sources") {
     "//skia/config",
     "//third_party/skia/include/core"
   ]
-  deps = []
+  deps = [
+      "//extensions/features:features",
+  ]
   sources = [
     "//chrome/browser/media/webrtc/desktop_media_list.h",
     "//chrome/browser/media/webrtc/desktop_streams_registry.cc",
@@ -86,6 +90,9 @@ source_set("qtwebengine_sources") {
       "//chrome/browser/printing/print_job_worker.h",
       "//chrome/browser/printing/print_job_worker_owner.cc",
       "//chrome/browser/printing/print_job_worker_owner.h",
+    ]
+    deps += [
+      "//printing/features:features",
     ]
   }
 
