Use GN spellcheck targets instead of listing the files
Change our spellcheck feature to depend on the new GN component target and
avoid listing the files ourselves.

Change-Id: I261941a9bec26436c428e832408d3af27fe3053f
Reviewed-by: Michal Klocek <michal.klocek@qt.io>

--- a/src/core/qtwebengine_sources.gni
+++ b/src/core/qtwebengine_sources.gni
@@ -12,47 +12,10 @@ source_set("qtwebengine_spellcheck_sources") {
     "//chrome/browser/spellchecker/spellcheck_message_filter.h",
     "//chrome/browser/spellchecker/spellcheck_service.cc",
     "//chrome/browser/spellchecker/spellcheck_service.h",
-    "//chrome/common/common_message_generator.cc",
-    "//components/spellcheck/browser/feedback.cc",
-    "//components/spellcheck/browser/feedback.h",
-    "//components/spellcheck/browser/feedback_sender.cc",
-    "//components/spellcheck/browser/feedback_sender.h",
-    "//components/spellcheck/browser/misspelling.cc",
-    "//components/spellcheck/browser/misspelling.h",
-    "//components/spellcheck/browser/spellcheck_action.cc",
-    "//components/spellcheck/browser/spellcheck_action.h",
-    "//components/spellcheck/browser/spellcheck_host_metrics.cc",
-    "//components/spellcheck/browser/spellcheck_host_metrics.h",
-    "//components/spellcheck/browser/spellcheck_platform_mac.mm",
-    "//components/spellcheck/browser/spelling_service_client.cc",
-    "//components/spellcheck/browser/spelling_service_client.h",
-    "//components/spellcheck/browser/word_trimmer.cc",
-    "//components/spellcheck/browser/word_trimmer.h",
-    "//components/spellcheck/browser/pref_names.cc",
-    "//components/spellcheck/browser/pref_names.h",
-    "//components/spellcheck/common/spellcheck_bdict_language.h",
-    "//components/spellcheck/common/spellcheck_common.cc",
-    "//components/spellcheck/common/spellcheck_common.h",
-    "//components/spellcheck/common/spellcheck_marker.h",
-    "//components/spellcheck/common/spellcheck_messages.h",
-    "//components/spellcheck/common/spellcheck_result.h",
-    "//components/spellcheck/common/spellcheck_switches.cc",
-    "//components/spellcheck/common/spellcheck_switches.h",
-    "//components/spellcheck/renderer/custom_dictionary_engine.cc",
-    "//components/spellcheck/renderer/custom_dictionary_engine.h",
-    "//components/spellcheck/renderer/hunspell_engine.cc",
-    "//components/spellcheck/renderer/hunspell_engine.h",
-    "//components/spellcheck/renderer/spellcheck.cc",
-    "//components/spellcheck/renderer/spellcheck.h",
-    "//components/spellcheck/renderer/spellcheck_language.cc",
-    "//components/spellcheck/renderer/spellcheck_language.h",
-    "//components/spellcheck/renderer/spellcheck_provider.cc",
-    "//components/spellcheck/renderer/spellcheck_provider.h",
-    "//components/spellcheck/renderer/spellcheck_worditerator.cc",
-    "//components/spellcheck/renderer/spellcheck_worditerator.h",
-    "//components/spellcheck/renderer/spelling_engine.h",
   ]
   deps = [
+    "//components/spellcheck/browser",
+    "//components/spellcheck/renderer",
     "//third_party/WebKit/public:blink",
     "//third_party/hunspell",
   ]
