--- a/configure.json
+++ b/configure.json
@@ -10,6 +10,7 @@
         "options": {
             "alsa": "boolean",
             "embedded": "boolean",
+            "optimize-for-size": { "type": "boolean", "name": "optimize_size" },
             "ffmpeg": { "type": "enum", "name": "system-ffmpeg", "values": { "system": "yes", "qt": "no" } },
             "opus": { "type": "enum", "name": "system-opus", "values": { "system": "yes", "qt": "no" } },
             "webp": { "type": "enum", "name": "system-webp", "values": { "system": "yes", "qt": "no" } },
@@ -77,6 +78,11 @@
             "condition": "config.unix",
             "autoDetect": "tests.embedded",
             "purpose": "Enables the embedded build configuration",
+            "output": [ "privateFeature" ]
+        },
+        "optimize_size": {
+            "label": "Optimize for size",
+            "autoDetect": "tests.embedded",
             "output": [ "privateFeature" ]
         },
         "alsa": {
@@ -156,6 +162,7 @@
             "section": "Qt WebEngine",
             "entries": [
                 "embedded",
+                "optimize_size",
                 "pepper-plugins",
                 "printing-and-pdf",
                 "proprietary-codecs",
