Adaptations for Chromium 57
Change-Id: Ia2756c1e9b13839c2330bd98cf953d47cbdac0dd
Reviewed-by: Peter Varga <pvarga@inf.u-szeged.hu>

--- a/src/core/qtwebengine_sources.gni
+++ b/src/core/qtwebengine_sources.gni
@@ -1,5 +1,7 @@
 import("//build/config/features.gni")
 import("//components/spellcheck/spellcheck_build_features.gni")
+import("//pdf/features.gni")
+import("//ppapi/features/features.gni")
 import("//printing/features/features.gni")
 
 source_set("qtwebengine_spellcheck_sources") {
@@ -99,6 +101,7 @@ source_set("qtwebengine_sources") {
   if (enable_pdf) {
       deps += [
          "//pdf",
+         "//pdf:features",
          "//components/printing/browser",
          "//components/printing/renderer",
       ]
