Simple adaptations for Chromium 58
Change-Id: I7c2c85973b03fdbd2eafb5339f33a3758d53e924
Reviewed-by: Peter Varga <pvarga@inf.u-szeged.hu>

--- a/src/core/qtwebengine.gni
+++ b/src/core/qtwebengine.gni
@@ -11,6 +11,7 @@ include_dirs = [
 
 deps = [
   "//base",
+  "//chrome/common:features",
   "//components/error_page/common",
   "//components/keyed_service/content",
   "//components/visitedlink/browser",
@@ -22,6 +23,7 @@ deps = [
   "//content/public/common",
   "//content/public/renderer",
   "//net:net_browser_services",
+  "//net:net_with_v8",
   "//skia",
   "//third_party/WebKit/public:blink",
   "//ui/accessibility",
