Graphics adaptations for Chromium 58
Change-Id: I66262ce7943bd5ba98defff5e4a33063b2ed0353
Reviewed-by: Peter Varga <pvarga@inf.u-szeged.hu>

--- a/src/core/qtwebengine_sources.gni
+++ b/src/core/qtwebengine_sources.gni
@@ -1,4 +1,5 @@
 import("//build/config/features.gni")
+import("//build/config/ui.gni")
 import("//components/spellcheck/spellcheck_build_features.gni")
 import("//pdf/features.gni")
 import("//ppapi/features/features.gni")
@@ -106,6 +107,5 @@ source_set("qtwebengine_sources") {
          "//components/printing/renderer",
       ]
   }
-
 }
 
