Make python2 usage more robust
After configuring Qt there will be an error message if a suitable python
version could not be found.

Add python2 configure test that
  - first looks for python2 in PATH
  - then looks for python in PATH
  - checks the Python version
  - stores the result in QMAKE_PYTHON2

Use $$QMAKE_PYTHON2 everywhere where we call python.

Pass $$QMAKE_PYTHON2 to gn for its exec_script feature.

Task-number: QTBUG-60164
Change-Id: I33de1273cbd20a787b3c8889d35280784dbcd5ae
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@qt.io>
Reviewed-by: Michal Klocek <michal.klocek@qt.io>

--- a/configure.json
+++ b/configure.json
@@ -58,6 +58,11 @@
     },
 
     "tests" : {
+        "python2": {
+            "label": "Python 2",
+            "type": "detectPython2",
+            "log": "location"
+        },
         "ninja": {
             "label": "system ninja",
             "type": "detectNinja"
@@ -73,6 +78,13 @@
     },
 
     "features": {
+        "python2": {
+            "label": "Python 2",
+            "condition": "tests.python2",
+            "output": [
+                { "type": "varAssign", "name": "QMAKE_PYTHON2", "value": "tests.python2.location" }
+            ]
+        },
         "embedded": {
             "label": "Embedded build",
             "condition": "config.unix",
@@ -156,6 +168,14 @@
             "output": [ "privateFeature" ]
         }
     },
+
+    "report": [
+        {
+            "type": "warning",
+            "condition": "!features.python2",
+            "message": "Python version 2 (2.7.5 or later) is required to build QtWebEngine."
+        }
+    ],
 
     "summary": [
         {
