Fix build with -no-spellchecker
Add dependency to spellchecker build_feature

Task-number: QTBUG-61165
Change-Id: Ib730280f00b07c9f8a0ffb59399e0a25bc9829a3
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>

--- a/src/core/qtwebengine.gni
+++ b/src/core/qtwebengine.gni
@@ -17,6 +17,7 @@ deps = [
   "//components/visitedlink/renderer",
   "//components/web_cache/browser",
   "//components/web_cache/renderer",
+  "//components/spellcheck:build_features",
   "//content/public/app:browser",
   "//content/public/browser",
   "//content/public/common",
