Add Configure-Time Tests for gperf, flex and bison
Configure-Time tests for presence of (required) gperf, bison and flex
are added to configure.pri and configure.json, so that we can decide
early on to skip the build, instead of starting a build that
will fail much later, yield incomprehensible error messages and
make the build of the complete Qt framework fail.

Task-number: QTBUG-52805
Change-Id: I7dab49e6e8672b72901519ad7d88de97197fe587
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/configure.json
+++ b/configure.json
@@ -67,6 +67,18 @@
             "type": "detectPython2",
             "log": "location"
         },
+        "gperf": {
+            "label": "gperf",
+            "type": "detectGperf"
+        },
+        "bison": {
+            "label": "bison",
+            "type": "detectBison"
+        },
+        "flex": {
+            "label": "flex",
+            "type": "detectFlex"
+        },
         "ninja": {
             "label": "system ninja",
             "type": "detectNinja"
@@ -88,6 +100,21 @@
             "output": [
                 { "type": "varAssign", "name": "QMAKE_PYTHON2", "value": "tests.python2.location" }
             ]
+        },
+        "gperf": {
+            "label": "gperf",
+            "condition": "tests.gperf",
+            "output": [ "privateFeature" ]
+        },
+        "bison": {
+            "label": "bison",
+            "condition": "tests.bison",
+            "output": [ "privateFeature" ]
+        },
+        "flex": {
+            "label": "flex",
+            "condition": "tests.flex",
+            "output": [ "privateFeature" ]
         },
         "embedded": {
             "label": "Embedded build",
@@ -185,6 +212,21 @@
             "type": "warning",
             "condition": "!features.python2",
             "message": "Python version 2 (2.7.5 or later) is required to build QtWebEngine."
+        },
+        {
+            "type": "warning",
+            "condition": "!features.gperf",
+            "message": "gperf is required to build QtWebEngine."
+        },
+        {
+            "type": "warning",
+            "condition": "!features.bison",
+            "message": "bison is required to build QtWebEngine."
+        },
+        {
+            "type": "warning",
+            "condition": "!features.flex",
+            "message": "flex is required to build QtWebEngine."
         }
     ],
 
