Add python check for module build
Python version check skipped the build only
for qt5 root builds, however for module build it only
printed the warning and the build continued.

Skip the build if python version is incorrect.

Change-Id: I72d5f638eb79de93faaaa07b39272bdcb8615c3f
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@qt.io>
Reviewed-by: Viktor Engelmann <viktor.engelmann@qt.io>
Reviewed-by: Kai Koehne <kai.koehne@qt.io>

--- a/configure.json
+++ b/configure.json
@@ -98,6 +98,7 @@
             "label": "Python 2",
             "condition": "tests.python2",
             "output": [
+                "privateFeature",
                 { "type": "varAssign", "name": "QMAKE_PYTHON2", "value": "tests.python2.location" }
             ]
         },
