Adaptations for Chromium 59
Change-Id: I472053e316bfa782d0a6fb8903f4901be12247ae
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/src/core/qtwebengine_sources.gni
+++ b/src/core/qtwebengine_sources.gni
@@ -21,6 +21,7 @@ source_set("qtwebengine_spellcheck_sources") {
   deps = [
     "//components/spellcheck/browser",
     "//components/spellcheck/renderer",
+    "//third_party/boringssl",
     "//third_party/WebKit/public:blink",
     "//third_party/hunspell",
   ]
