Adaptations for Chromium 60
Change-Id: I536258e22c2ec143f2fd3f1cbda229e0611b6af4
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>

--- a/configure.json
+++ b/configure.json
@@ -54,9 +54,9 @@
             ]
         },
         "webp": {
-            "label": "libwebp and libwebpdemux",
+            "label": "libwebp, libwebpmux and libwebpdemux",
             "sources": [
-                { "type": "pkgConfig", "args": "libwebp libwebpdemux" }
+                { "type": "pkgConfig", "args": "libwebp libwebpmux libwebpdemux" }
             ]
         },
         "nss": {
@@ -192,7 +192,7 @@
             "output": [ "privateFeature" ]
         },
         "system-webp": {
-            "label": "libwebp and libwebpdemux",
+            "label": "libwebp, libwebpmux and libwebpdemux",
             "autoDetect": "config.unix",
             "condition": "libs.webp",
             "output": [ "privateFeature" ]
