Add check for glibc > 2.16
Fix broken compilation due to "Unable to create small
static TLS block in shared library"

https://sourceware.org/bugzilla/show_bug.cgi?id=14898

Change-Id: I53840dbff22f4b10bdb32401f79889f6c313f470
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/configure.json
+++ b/configure.json
@@ -97,6 +97,10 @@
         "embedded": {
             "label": "embedded",
             "type": "embedded"
+        },
+        "glibc": {
+            "label": "glibc > 2.16",
+            "type": "detectGlibc"
         }
     },
 
@@ -219,6 +223,11 @@
             "label": "Using system gn",
             "autoDetect": false,
             "condition": "tests.gn",
+            "output": [ "privateFeature" ]
+        },
+        "system-glibc": {
+            "label": "glibc",
+            "condition": "config.linux && tests.glibc",
             "output": [ "privateFeature" ]
         }
     },
